force-app/main/default/objects/Trip__c/fields/Planned_Budget__c.field-meta.xml
<CustomField>
    <fullName>Planned_Budget__c</fullName>
    <label>Planned Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>