force-app/main/default/objects/Trip__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>