force-app/main/default/objects/Trip__c/fields/Trip_Description__c.field-meta.xml
<CustomField>
    <fullName>Trip_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trip Description</label>
    <type>TextArea</type>
</CustomField>